--- a/index.html
+++ b/index.html
@@ -1,81 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Trina Payne</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="Sunset favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kolker+Brush&family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+  <div class="top-container">
 
-<head>
-  <meta charset="utf-8">
-  <title>TPayne's Personal Site</title>
-</head>
+    <h1><em>I'm Trina.</em></h1>
+    <h2>a web developer.</h2>
+    <img src="images/welcome1.png" alt="welcome-img" width="220px" 
+  </div>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td> <img src="T Pic.png" alt="Trina's Picture"></td>
-      <td><h1>T Payne</h1>
-      <p><em>Founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong> </em></p>
-      <p>I am an iOS and Web Developer. I love playing sports and videography</p></td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>August martin H.S.</li>
-    <li>Borough of Mnahattan Community College</li>
-    <li>Old Dominion University</li>
-    <li>Udemy</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-      <td>August 2018 – Present</td>
-      <td>Structural Apprenctice at The United States Air Force</td>
-    </tr>
-    <tr>
-      <td>March 2016 – July 2018</td>
-      <td>Product Support Associate at Duty Free North America</td>
-    </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-
-<table cellspacing="10">
-  <tr>
-    <td>
-      <table>
-          <tr>
-            <td>iOS Development</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Web Developer</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Videography</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-</table>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/T pic.png" alt="Profile-img" width="140px"
+      <br>
+      <h2>Hello.</h2>
+      <p>Welcome to my website.I'm a web designer / developer based in Alamogordo, New Mexico.
+      <p>I am from NYC and currently a member of the Air Force and I am learning to become a frontend developer.</p>
+       I have a passion for web design and love to create for the web.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="love"src="images/love.png" alt="love" width="120px">
+        <h3></h3>
+        <p>Customer Service, Leadership, Problem Solving, Communication, Listening, Collaboration, Project Management, Photoshop, Photography, InDesign, Illustrator, Social Media, Video Editing, Web Development, Frontend Development, Design, Figma(Software).</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Languages</h3>
+        <img class="" src="images/css (2).png" alt="css-img" width="100px" />
+        <img class="" src="images/html-5.png" alt="html-img" width="100px" />
+        <img class="" src="images/java-script.png" alt="java-img" width="100px" />
+        <img class="" src="images/python.png" alt="python-img" width="100px" />
+        <p>CSS, HTML5, JavaScript, Python</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>REACH OUT</h2>
+      <h3>I’m currently available for freelance work.</h3>
+      <p class="contact-message">
+      </p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p><br>
+      <a class="btn" href="mailto:Trina.Payne126@Gmail.com">CONTACT ME</a><br>
+    </div>
+  </div>
 
 
-  </tr>
-</table>
+  <div class="bottom-container">
+    <a class="footer-link" href="www.linkedin.com/in/trina-payne">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <br>
+    <p class="copyright">© 2022 Trina Payne.</p>
+  </div>
 
-    <tbody>
-
-    </tbody>
-
-  <hr>
-<a href="hobbies.html">My Hobbies</a>
-<br>
-<a href="Contact Me.html">Contact Me</a>
-</body>
-
+  </body>
 </html>
