--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/T pic.png" alt="Profile-img" width="140px"
+      <img src="images/TPic.png" alt="Profile-img" width="140px"
       <br>
       <h2>Hello.</h2>
       <p>Welcome to my website.I'm a web designer / developer based in Alamogordo, New Mexico.
