--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="images/TPic.png" alt="Trina Payne" width="140px"
       <br>
       <h2>Hello.</h2>
-      <p>Welcome to my website.I'm a web designer / developer based in Alamogordo, New Mexico.
+      <p>Welcome to my website.I'm a future web designer / developer based in Alamogordo, New Mexico.
       <p>I am from NYC and currently a member of the Air Force and I am learning to become a frontend developer.</p>
        I have a passion for web design and love to create for the web.</p>
     </div>
@@ -32,7 +32,7 @@
       <div class="skill-row">
         <img class="love"src="images/love.png" alt="love" width="120px">
         <h3></h3>
-        <p>Customer Service, Leadership, Problem Solving, Communication, Listening, Collaboration, Project Management, Photoshop, Photography, InDesign, Illustrator, Social Media, Video Editing, Web Development, Frontend Development, Design, Figma(Software).</p>
+        <p>Customer Service, Leadership, Problem Solving, Communication, Listening, Collaboration, Project Management, Photoshop, Photography, InDesign, Illustrator, Social Media, Video Editing, Web Development, Frontend Development, Design.</p>
       </div>
       <div class="skill-row">
         <img class="" src="" alt="">
@@ -40,14 +40,14 @@
         <img class="" src="images/css (2).png" alt="css-img" width="100px" />
         <img class="" src="images/html-5.png" alt="html-img" width="100px" />
         <img class="" src="images/java-script.png" alt="java-img" width="100px" />
-        <img class="" src="images/python.png" alt="python-img" width="100px" />
-        <p>CSS, HTML5, JavaScript, Python</p>
+        
+        <p>CSS, HTML5, JavaScript</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>REACH OUT</h2>
-      <h3>I’m currently available for freelance work.</h3>
+      <h3>I will soon be available for freelance work.</h3>
       <p class="contact-message">
       </p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p><br>
       <a class="btn" href="mailto:Trina.Payne126@Gmail.com">CONTACT ME</a><br>
@@ -56,7 +56,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="www.linkedin.com/in/trina-payne">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/trina-payne/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
     <br>
